--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ pandas==2.1.0
 numpy==1.24.3
 
 # APIs y requests
-requests==2.31.0
-urllib3==2.0.4
+requests>=2.32.0
+urllib3>=2.2.2
 
 # Procesamiento de JSON y YAML
 pyyaml==6.0.1
@@ -35,7 +35,7 @@ pytest-mock==3.11.1
 
 # Herramientas de desarrollo
 flake8==6.0.0
-black==23.7.0
+black>=24.0.0
 isort==5.12.0
 
 # Procesamiento de archivos
@@ -43,5 +43,5 @@ openpyxl==3.1.2
 csv-reader==1.2.0
 
 # Criptografía y seguridad
-cryptography==41.0.3
+cryptography>=43.0.1
 bcrypt==4.0.1
