--- a/package.json
+++ b/package.json
@@ -104,18 +104,21 @@
     "jest": "^29.0.0",
     "lint-staged": "^16.1.2",
     "markdownlint-cli": "^0.45.0",
-    "pre-commit": "^1.2.2",
+    "pre-commit": "^1.0.10",
     "prettier": "^3.0.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
     "typedoc": "^0.25.0",
     "typescript": "^5.0.0",
-    "vercel": "^25.2.0",
+    "vercel": "^28.18.5",
     "zapier-platform-cli": "^17.2.0"
   },
   "dependencies": {
     "@hubspot/api-client": "^12.0.0",
+    "@octokit/plugin-paginate-rest": "^13.1.1",
+    "@octokit/request": "^10.0.3",
+    "@octokit/request-error": "^7.0.0",
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.9.3",
     "@types/node-cron": "^3.0.11",
@@ -123,7 +126,9 @@
     "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "cross-spawn": "^7.0.6",
     "dotenv": "^16.0.0",
+    "estree-util-value-to-estree": "^3.4.0",
     "express": "^4.18.0",
     "firebase-admin": "^12.0.0",
     "node-cron": "^4.1.1",
