--- a/package.json
+++ b/package.json
@@ -88,7 +88,21 @@
     "lint:md": "markdownlint '**/*.md' --ignore node_modules",
     "lint:md:fix": "markdownlint '**/*.md' --ignore node_modules --fix",
     "format:all": "prettier --write '**/*.{ts,js,json,yaml,yml,md}' --ignore-path .gitignore",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "workspace:install": "pnpm install --recursive",
+    "workspace:clean": "pnpm exec rimraf node_modules && pnpm store prune",
+    "workspace:outdated": "pnpm outdated --recursive",
+    "workspace:update": "pnpm update --recursive",
+    "gdpr:validate": "pnpm exec eslint \"gdpr/**/*.{js,ts}\" && node gdpr/validate-cookies-policy.js",
+    "gdpr:audit": "node scripts/gdpr-audit.js",
+    "gdpr:generate-report": "node scripts/gdpr-report-generator.js",
+    "gdpr:test": "pnpm exec jest --testPathPattern=gdpr",
+    "security:scan": "pnpm audit --audit-level moderate && npx snyk test",
+    "security:fix": "pnpm audit --fix && npx snyk fix",
+    "security:report": "node scripts/security-report.js",
+    "dev:pnpm": "pnpm exec ts-node-dev --respawn --transpile-only src/index.ts",
+    "build:pnpm": "pnpm exec tsc && pnpm run copy-assets",
+    "test:pnpm": "pnpm exec jest"
   },
   "keywords": [
     "slack",
@@ -110,11 +124,16 @@
     "@types/mocha": "10.0.10",
     "@types/nock": "10.0.3",
     "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "chai": "5.2.0",
     "eslint": "^8.0.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-security": "3.0.1",
     "husky": "^9.1.7",
     "jest": "^29.0.0",
     "jest-junit": "16.0.0",
@@ -124,6 +143,7 @@
     "nock": "14.0.5",
     "pre-commit": "^1.0.10",
     "prettier": "^3.0.0",
+    "snyk": "1.1297.3",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
@@ -139,19 +159,32 @@
     "@octokit/request-error": "^7.0.0",
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.9.3",
+    "@types/cookie-parser": "1.4.9",
+    "@types/crypto-js": "4.2.2",
+    "@types/js-cookie": "3.0.6",
     "@types/node-cron": "^3.0.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.10.0",
+    "cookie-parser": "1.4.7",
+    "cookie-universal": "2.2.2",
+    "cookie-universal-nuxt": "2.2.2",
     "cors": "^2.8.5",
     "cross-spawn": "^7.0.6",
+    "crypto-js": "4.2.0",
     "dotenv": "^16.0.0",
     "estree-util-value-to-estree": "^3.4.0",
     "express": "^4.18.0",
     "firebase-admin": "^12.0.0",
+    "gdpr-consent": "5.0.4",
+    "js-cookie": "3.0.5",
     "node-cron": "^4.1.1",
+    "react": "^18.2.0",
+    "react-cookie-consent": "9.0.0",
+    "react-dom": "^18.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "vanilla-cookieconsent": "3.1.0",
     "yaml": "^2.8.0",
     "zapier-platform-core": "^17.1.0"
   },
