--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "commonjs",
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -15,6 +19,7 @@
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    "jsx": "react-jsx",
     "types": ["jest", "node"]
   },
   "include": ["src/**/*"],
