--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "zapier-platform-core": "^17.1.0"
   },
   "overrides": {
+    "crypto-js": "^4.2.0",
     "undici": "^6.0.0",
     "esbuild": "^0.24.0",
     "tar": "^6.2.1",
@@ -210,6 +211,11 @@
     "*.{sh,bash}": [
       "chmod +x"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "crypto-js": "^4.2.0"
+    }
   },
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
